<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    tools:context=".sup_driver.SuperDriver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorHeader"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back_about"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/back_arrow"
                android:tint="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <customviews.typefacesviews.TypeFaceTextMonixRegular
                android:id="@+id/text_name"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_drivers"
                android:textAllCaps="false"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">


        <TextView
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/pure_black"
            android:drawableRight="@drawable/ic_perm_contact_calendar_black_24dp"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/start_date"/>

            <TextView
                android:id="@+id/current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="10dp"
                android:text="______"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

        <TextView
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="20dp"
            android:drawableRight="@drawable/ic_perm_contact_calendar_black_24dp"
            android:drawableTint="@color/colorPrimary"
            android:textColor="@color/pure_black" />

            <TextView
                android:id="@+id/current_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="_____"
                android:textSize="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_pic"
            android:layout_weight="1"
            android:textColor="@color/icons_8_muted_greydark"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_name"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/icons_8_muted_greydark"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_trips"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/icons_8_muted_greydark"
            android:layout_weight="1"/>
    </LinearLayout>

    <com.sam.placer.PlaceHolderView
        android:id="@+id/super_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

    </com.sam.placer.PlaceHolderView>

</LinearLayout>