<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    tools:context=".HomeAddressActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="49dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="49dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_left_sort_white"
                android:tint="@color/icons_8_muted_grey"
                android:id="@+id/back"
                android:padding="10dp"/>
            <TextView
                android:layout_width="fill_parent"
                android:textSize="16dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginRight="49dp"
                android:text="@string/set_you_destination"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>





    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/turn_on_your_destination"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#f4f4f4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deactivated"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:textAllCaps="true"
                        android:textColor="@color/red_text"
                        android:id="@+id/button"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_home_address"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorPrimary"
                android:textSize="13dp"/>
            <LinearLayout
                android:id="@+id/ll_set_home_sddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="3dp"
                android:gravity="center">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/address_text"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/click_to_set_you_home_address"/>

                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/edit_image"
                        android:src="@drawable/ic_edit_vector"
                        android:padding="3dp"/>
                </FrameLayout>
            </LinearLayout>





        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>
